@@ -2,6 +2,8 @@ Revision history for Dist-Zilla-PluginBundle-DAGOLDEN
 
 {{$NEXT}}
 
+    - Add Test::MinimumVersion with default perl of 5.010
+
 0.042     2013-02-27 10:19:05 America/New_York
 
     - Add ContributorsFromGit plugin and Contributors Pod Weaver section
